parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> INIT programA
Rule 2     programA -> programB END
Rule 3     programA -> END
Rule 4     programB -> workspace programC
Rule 5     programC -> programB
Rule 6     programC -> empty
Rule 7     workspace -> statute
Rule 8     workspace -> module
Rule 9     statute -> assign
Rule 10    statute -> condition
Rule 11    statute -> write
Rule 12    statute -> repeat
Rule 13    statute -> command
Rule 14    statute -> calling
Rule 15    statute -> pipeline
Rule 16    statute -> screen
Rule 17    module -> MOD # ID moduleA
Rule 18    moduleA -> ( vars ) block
Rule 19    moduleA -> block
Rule 20    vars -> type ID varsA
Rule 21    varsA -> , vars
Rule 22    varsA -> empty
Rule 23    type -> INT
Rule 24    type -> FLOAT
Rule 25    calling -> # ID ( callingA
Rule 26    callingA -> callingB ) ;
Rule 27    callingA -> ) ;
Rule 28    callingB -> expression callingC
Rule 29    callingC -> , callingB
Rule 30    callingC -> empty
Rule 31    block -> { blockA
Rule 32    blockA -> blockB }
Rule 33    blockA -> }
Rule 34    blockB -> statute blockC
Rule 35    blockC -> blockB
Rule 36    blockC -> empty
Rule 37    assign -> ID = expression ;
Rule 38    condition -> IF ( expression ) block conditionA
Rule 39    conditionA -> ELSE block
Rule 40    conditionA -> empty
Rule 41    write -> ECHO expression ;
Rule 42    write -> " CTE_STRING " ;
Rule 43    pipeline -> PIPE ID pipelineA
Rule 44    pipelineA -> [ pipelineB ] ;
Rule 45    pipelineA -> IN ( var_cte ) ;
Rule 46    pipelineA -> OUT ( ) ;
Rule 47    pipelineA -> COUNT ;
Rule 48    pipelineB -> exp pipelineC
Rule 49    pipelineC -> , pipelineB
Rule 50    pipelineC -> empty
Rule 51    command -> figure exp exp color ;
Rule 52    command -> SAMPLE commandA
Rule 53    commandA -> ON move exp CTE_INTEGER color ;
Rule 54    commandA -> OFF move exp ;
Rule 55    repeat -> REPLAY CTE_INTEGER [ repeatA ] ;
Rule 56    repeatA -> command repeatB
Rule 57    repeatB -> repeatA
Rule 58    repeatB -> empty
Rule 59    expression -> exp = = exp
Rule 60    expression -> exp < > exp
Rule 61    expression -> exp < = exp
Rule 62    expression -> exp > = exp
Rule 63    expression -> exp > exp
Rule 64    expression -> exp < exp
Rule 65    expression -> exp
Rule 66    exp -> term expA
Rule 67    expA -> expB
Rule 68    expA -> empty
Rule 69    expB -> + exp
Rule 70    expB -> - exp
Rule 71    term -> factor termA
Rule 72    termA -> termB
Rule 73    termA -> empty
Rule 74    termB -> * term
Rule 75    termB -> / term
Rule 76    factor -> ( expression )
Rule 77    factor -> var_cte
Rule 78    figure -> OVAL
Rule 79    figure -> TRIO
Rule 80    figure -> QUAD
Rule 81    figure -> ARC
Rule 82    move -> UP
Rule 83    move -> DOWN
Rule 84    move -> LEFT
Rule 85    move -> RIGHT
Rule 86    color -> RED
Rule 87    color -> YELLOW
Rule 88    color -> BLUE
Rule 89    color -> GREEN
Rule 90    color -> BLACK
Rule 91    color -> ORANGE
Rule 92    color -> PURPLE
Rule 93    color -> CYAN
Rule 94    screen -> WHERE
Rule 95    screen -> CLEAR
Rule 96    var_cte -> ID
Rule 97    var_cte -> CTE_INTEGER
Rule 98    var_cte -> CTE_FLOAT
Rule 99    empty -> <empty>

Terminals, with rules where they appear

"                    : 42 42
#                    : 17 25
(                    : 18 25 38 45 46 76
)                    : 18 26 27 38 45 46 76
*                    : 74
+                    : 69
,                    : 21 29 49
-                    : 70
/                    : 75
;                    : 26 27 37 41 42 44 45 46 47 51 53 54 55
<                    : 60 61 64
=                    : 37 59 59 61 62
>                    : 60 62 63
ARC                  : 81
BLACK                : 90
BLUE                 : 88
CLEAR                : 95
COUNT                : 47
CTE_FLOAT            : 98
CTE_INTEGER          : 53 55 97
CTE_STRING           : 42
CYAN                 : 93
DOWN                 : 83
ECHO                 : 41
ELSE                 : 39
END                  : 2 3
FLOAT                : 24
GREEN                : 89
ID                   : 17 20 25 37 43 96
IF                   : 38
IN                   : 45
INIT                 : 1
INT                  : 23
LEFT                 : 84
MOD                  : 17
OFF                  : 54
ON                   : 53
ORANGE               : 91
OUT                  : 46
OVAL                 : 78
PIPE                 : 43
PURPLE               : 92
QUAD                 : 80
RED                  : 86
REPLAY               : 55
RIGHT                : 85
SAMPLE               : 52
TRIO                 : 79
UP                   : 82
WHERE                : 94
YELLOW               : 87
[                    : 44 55
]                    : 44 55
error                : 
{                    : 31
}                    : 32 33

Nonterminals, with rules where they appear

assign               : 9
block                : 18 19 38 39
blockA               : 31
blockB               : 32 35
blockC               : 34
calling              : 14
callingA             : 25
callingB             : 26 29
callingC             : 28
color                : 51 53
command              : 13 56
commandA             : 52
condition            : 10
conditionA           : 38
empty                : 6 22 30 36 40 50 58 68 73
exp                  : 48 51 51 53 54 59 59 60 60 61 61 62 62 63 63 64 64 65 69 70
expA                 : 66
expB                 : 67
expression           : 28 37 38 41 76
factor               : 71
figure               : 51
module               : 8
moduleA              : 17
move                 : 53 54
pipeline             : 15
pipelineA            : 43
pipelineB            : 44 49
pipelineC            : 48
program              : 0
programA             : 1
programB             : 2 5
programC             : 4
repeat               : 12
repeatA              : 55 57
repeatB              : 56
screen               : 16
statute              : 7 34
term                 : 66 74 75
termA                : 71
termB                : 72
type                 : 20
var_cte              : 45 77
vars                 : 18 21
varsA                : 20
workspace            : 4
write                : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . INIT programA

    INIT            shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> INIT . programA
    (2) programA -> . programB END
    (3) programA -> . END
    (4) programB -> . workspace programC
    (7) workspace -> . statute
    (8) workspace -> . module
    (9) statute -> . assign
    (10) statute -> . condition
    (11) statute -> . write
    (12) statute -> . repeat
    (13) statute -> . command
    (14) statute -> . calling
    (15) statute -> . pipeline
    (16) statute -> . screen
    (17) module -> . MOD # ID moduleA
    (37) assign -> . ID = expression ;
    (38) condition -> . IF ( expression ) block conditionA
    (41) write -> . ECHO expression ;
    (42) write -> . " CTE_STRING " ;
    (55) repeat -> . REPLAY CTE_INTEGER [ repeatA ] ;
    (51) command -> . figure exp exp color ;
    (52) command -> . SAMPLE commandA
    (25) calling -> . # ID ( callingA
    (43) pipeline -> . PIPE ID pipelineA
    (94) screen -> . WHERE
    (95) screen -> . CLEAR
    (78) figure -> . OVAL
    (79) figure -> . TRIO
    (80) figure -> . QUAD
    (81) figure -> . ARC

    END             shift and go to state 15
    MOD             shift and go to state 32
    ID              shift and go to state 22
    IF              shift and go to state 23
    ECHO            shift and go to state 17
    "               shift and go to state 9
    REPLAY          shift and go to state 5
    SAMPLE          shift and go to state 18
    #               shift and go to state 8
    PIPE            shift and go to state 7
    WHERE           shift and go to state 27
    CLEAR           shift and go to state 12
    OVAL            shift and go to state 6
    TRIO            shift and go to state 13
    QUAD            shift and go to state 21
    ARC             shift and go to state 28

    figure                         shift and go to state 3
    module                         shift and go to state 4
    write                          shift and go to state 10
    condition                      shift and go to state 11
    repeat                         shift and go to state 14
    screen                         shift and go to state 16
    programB                       shift and go to state 20
    statute                        shift and go to state 24
    pipeline                       shift and go to state 25
    calling                        shift and go to state 26
    command                        shift and go to state 29
    workspace                      shift and go to state 30
    assign                         shift and go to state 31
    programA                       shift and go to state 19

state 2

    (0) S' -> program .



state 3

    (51) command -> figure . exp exp color ;
    (66) exp -> . term expA
    (71) term -> . factor termA
    (76) factor -> . ( expression )
    (77) factor -> . var_cte
    (96) var_cte -> . ID
    (97) var_cte -> . CTE_INTEGER
    (98) var_cte -> . CTE_FLOAT

    (               shift and go to state 34
    ID              shift and go to state 40
    CTE_INTEGER     shift and go to state 37
    CTE_FLOAT       shift and go to state 35

    term                           shift and go to state 33
    var_cte                        shift and go to state 36
    exp                            shift and go to state 38
    factor                         shift and go to state 39

state 4

    (8) workspace -> module .

    MOD             reduce using rule 8 (workspace -> module .)
    ID              reduce using rule 8 (workspace -> module .)
    IF              reduce using rule 8 (workspace -> module .)
    ECHO            reduce using rule 8 (workspace -> module .)
    "               reduce using rule 8 (workspace -> module .)
    REPLAY          reduce using rule 8 (workspace -> module .)
    SAMPLE          reduce using rule 8 (workspace -> module .)
    #               reduce using rule 8 (workspace -> module .)
    PIPE            reduce using rule 8 (workspace -> module .)
    WHERE           reduce using rule 8 (workspace -> module .)
    CLEAR           reduce using rule 8 (workspace -> module .)
    OVAL            reduce using rule 8 (workspace -> module .)
    TRIO            reduce using rule 8 (workspace -> module .)
    QUAD            reduce using rule 8 (workspace -> module .)
    ARC             reduce using rule 8 (workspace -> module .)
    END             reduce using rule 8 (workspace -> module .)


state 5

    (55) repeat -> REPLAY . CTE_INTEGER [ repeatA ] ;

    CTE_INTEGER     shift and go to state 41


state 6

    (78) figure -> OVAL .

    (               reduce using rule 78 (figure -> OVAL .)
    ID              reduce using rule 78 (figure -> OVAL .)
    CTE_INTEGER     reduce using rule 78 (figure -> OVAL .)
    CTE_FLOAT       reduce using rule 78 (figure -> OVAL .)


state 7

    (43) pipeline -> PIPE . ID pipelineA

    ID              shift and go to state 42


state 8

    (25) calling -> # . ID ( callingA

    ID              shift and go to state 43


state 9

    (42) write -> " . CTE_STRING " ;

    CTE_STRING      shift and go to state 44


state 10

    (11) statute -> write .

    MOD             reduce using rule 11 (statute -> write .)
    ID              reduce using rule 11 (statute -> write .)
    IF              reduce using rule 11 (statute -> write .)
    ECHO            reduce using rule 11 (statute -> write .)
    "               reduce using rule 11 (statute -> write .)
    REPLAY          reduce using rule 11 (statute -> write .)
    SAMPLE          reduce using rule 11 (statute -> write .)
    #               reduce using rule 11 (statute -> write .)
    PIPE            reduce using rule 11 (statute -> write .)
    WHERE           reduce using rule 11 (statute -> write .)
    CLEAR           reduce using rule 11 (statute -> write .)
    OVAL            reduce using rule 11 (statute -> write .)
    TRIO            reduce using rule 11 (statute -> write .)
    QUAD            reduce using rule 11 (statute -> write .)
    ARC             reduce using rule 11 (statute -> write .)
    END             reduce using rule 11 (statute -> write .)
    }               reduce using rule 11 (statute -> write .)


state 11

    (10) statute -> condition .

    MOD             reduce using rule 10 (statute -> condition .)
    ID              reduce using rule 10 (statute -> condition .)
    IF              reduce using rule 10 (statute -> condition .)
    ECHO            reduce using rule 10 (statute -> condition .)
    "               reduce using rule 10 (statute -> condition .)
    REPLAY          reduce using rule 10 (statute -> condition .)
    SAMPLE          reduce using rule 10 (statute -> condition .)
    #               reduce using rule 10 (statute -> condition .)
    PIPE            reduce using rule 10 (statute -> condition .)
    WHERE           reduce using rule 10 (statute -> condition .)
    CLEAR           reduce using rule 10 (statute -> condition .)
    OVAL            reduce using rule 10 (statute -> condition .)
    TRIO            reduce using rule 10 (statute -> condition .)
    QUAD            reduce using rule 10 (statute -> condition .)
    ARC             reduce using rule 10 (statute -> condition .)
    END             reduce using rule 10 (statute -> condition .)
    }               reduce using rule 10 (statute -> condition .)


state 12

    (95) screen -> CLEAR .

    MOD             reduce using rule 95 (screen -> CLEAR .)
    ID              reduce using rule 95 (screen -> CLEAR .)
    IF              reduce using rule 95 (screen -> CLEAR .)
    ECHO            reduce using rule 95 (screen -> CLEAR .)
    "               reduce using rule 95 (screen -> CLEAR .)
    REPLAY          reduce using rule 95 (screen -> CLEAR .)
    SAMPLE          reduce using rule 95 (screen -> CLEAR .)
    #               reduce using rule 95 (screen -> CLEAR .)
    PIPE            reduce using rule 95 (screen -> CLEAR .)
    WHERE           reduce using rule 95 (screen -> CLEAR .)
    CLEAR           reduce using rule 95 (screen -> CLEAR .)
    OVAL            reduce using rule 95 (screen -> CLEAR .)
    TRIO            reduce using rule 95 (screen -> CLEAR .)
    QUAD            reduce using rule 95 (screen -> CLEAR .)
    ARC             reduce using rule 95 (screen -> CLEAR .)
    END             reduce using rule 95 (screen -> CLEAR .)
    }               reduce using rule 95 (screen -> CLEAR .)


state 13

    (79) figure -> TRIO .

    (               reduce using rule 79 (figure -> TRIO .)
    ID              reduce using rule 79 (figure -> TRIO .)
    CTE_INTEGER     reduce using rule 79 (figure -> TRIO .)
    CTE_FLOAT       reduce using rule 79 (figure -> TRIO .)


state 14

    (12) statute -> repeat .

    MOD             reduce using rule 12 (statute -> repeat .)
    ID              reduce using rule 12 (statute -> repeat .)
    IF              reduce using rule 12 (statute -> repeat .)
    ECHO            reduce using rule 12 (statute -> repeat .)
    "               reduce using rule 12 (statute -> repeat .)
    REPLAY          reduce using rule 12 (statute -> repeat .)
    SAMPLE          reduce using rule 12 (statute -> repeat .)
    #               reduce using rule 12 (statute -> repeat .)
    PIPE            reduce using rule 12 (statute -> repeat .)
    WHERE           reduce using rule 12 (statute -> repeat .)
    CLEAR           reduce using rule 12 (statute -> repeat .)
    OVAL            reduce using rule 12 (statute -> repeat .)
    TRIO            reduce using rule 12 (statute -> repeat .)
    QUAD            reduce using rule 12 (statute -> repeat .)
    ARC             reduce using rule 12 (statute -> repeat .)
    END             reduce using rule 12 (statute -> repeat .)
    }               reduce using rule 12 (statute -> repeat .)


state 15

    (3) programA -> END .

    $end            reduce using rule 3 (programA -> END .)


state 16

    (16) statute -> screen .

    MOD             reduce using rule 16 (statute -> screen .)
    ID              reduce using rule 16 (statute -> screen .)
    IF              reduce using rule 16 (statute -> screen .)
    ECHO            reduce using rule 16 (statute -> screen .)
    "               reduce using rule 16 (statute -> screen .)
    REPLAY          reduce using rule 16 (statute -> screen .)
    SAMPLE          reduce using rule 16 (statute -> screen .)
    #               reduce using rule 16 (statute -> screen .)
    PIPE            reduce using rule 16 (statute -> screen .)
    WHERE           reduce using rule 16 (statute -> screen .)
    CLEAR           reduce using rule 16 (statute -> screen .)
    OVAL            reduce using rule 16 (statute -> screen .)
    TRIO            reduce using rule 16 (statute -> screen .)
    QUAD            reduce using rule 16 (statute -> screen .)
    ARC             reduce using rule 16 (statute -> screen .)
    END             reduce using rule 16 (statute -> screen .)
    }               reduce using rule 16 (statute -> screen .)


state 17

    (41) write -> ECHO . expression ;
    (59) expression -> . exp = = exp
    (60) expression -> . exp < > exp
    (61) expression -> . exp < = exp
    (62) expression -> . exp > = exp
    (63) expression -> . exp > exp
    (64) expression -> . exp < exp
    (65) expression -> . exp
    (66) exp -> . term expA
    (71) term -> . factor termA
    (76) factor -> . ( expression )
    (77) factor -> . var_cte
    (96) var_cte -> . ID
    (97) var_cte -> . CTE_INTEGER
    (98) var_cte -> . CTE_FLOAT

    (               shift and go to state 34
    ID              shift and go to state 40
    CTE_INTEGER     shift and go to state 37
    CTE_FLOAT       shift and go to state 35

    term                           shift and go to state 33
    exp                            shift and go to state 46
    var_cte                        shift and go to state 36
    factor                         shift and go to state 39
    expression                     shift and go to state 45

state 18

    (52) command -> SAMPLE . commandA
    (53) commandA -> . ON move exp CTE_INTEGER color ;
    (54) commandA -> . OFF move exp ;

    ON              shift and go to state 49
    OFF             shift and go to state 48

    commandA                       shift and go to state 47

state 19

    (1) program -> INIT programA .

    $end            reduce using rule 1 (program -> INIT programA .)


state 20

    (2) programA -> programB . END

    END             shift and go to state 50


state 21

    (80) figure -> QUAD .

    (               reduce using rule 80 (figure -> QUAD .)
    ID              reduce using rule 80 (figure -> QUAD .)
    CTE_INTEGER     reduce using rule 80 (figure -> QUAD .)
    CTE_FLOAT       reduce using rule 80 (figure -> QUAD .)


state 22

    (37) assign -> ID . = expression ;

    =               shift and go to state 51


state 23

    (38) condition -> IF . ( expression ) block conditionA

    (               shift and go to state 52


state 24

    (7) workspace -> statute .

    MOD             reduce using rule 7 (workspace -> statute .)
    ID              reduce using rule 7 (workspace -> statute .)
    IF              reduce using rule 7 (workspace -> statute .)
    ECHO            reduce using rule 7 (workspace -> statute .)
    "               reduce using rule 7 (workspace -> statute .)
    REPLAY          reduce using rule 7 (workspace -> statute .)
    SAMPLE          reduce using rule 7 (workspace -> statute .)
    #               reduce using rule 7 (workspace -> statute .)
    PIPE            reduce using rule 7 (workspace -> statute .)
    WHERE           reduce using rule 7 (workspace -> statute .)
    CLEAR           reduce using rule 7 (workspace -> statute .)
    OVAL            reduce using rule 7 (workspace -> statute .)
    TRIO            reduce using rule 7 (workspace -> statute .)
    QUAD            reduce using rule 7 (workspace -> statute .)
    ARC             reduce using rule 7 (workspace -> statute .)
    END             reduce using rule 7 (workspace -> statute .)


state 25

    (15) statute -> pipeline .

    MOD             reduce using rule 15 (statute -> pipeline .)
    ID              reduce using rule 15 (statute -> pipeline .)
    IF              reduce using rule 15 (statute -> pipeline .)
    ECHO            reduce using rule 15 (statute -> pipeline .)
    "               reduce using rule 15 (statute -> pipeline .)
    REPLAY          reduce using rule 15 (statute -> pipeline .)
    SAMPLE          reduce using rule 15 (statute -> pipeline .)
    #               reduce using rule 15 (statute -> pipeline .)
    PIPE            reduce using rule 15 (statute -> pipeline .)
    WHERE           reduce using rule 15 (statute -> pipeline .)
    CLEAR           reduce using rule 15 (statute -> pipeline .)
    OVAL            reduce using rule 15 (statute -> pipeline .)
    TRIO            reduce using rule 15 (statute -> pipeline .)
    QUAD            reduce using rule 15 (statute -> pipeline .)
    ARC             reduce using rule 15 (statute -> pipeline .)
    END             reduce using rule 15 (statute -> pipeline .)
    }               reduce using rule 15 (statute -> pipeline .)


state 26

    (14) statute -> calling .

    MOD             reduce using rule 14 (statute -> calling .)
    ID              reduce using rule 14 (statute -> calling .)
    IF              reduce using rule 14 (statute -> calling .)
    ECHO            reduce using rule 14 (statute -> calling .)
    "               reduce using rule 14 (statute -> calling .)
    REPLAY          reduce using rule 14 (statute -> calling .)
    SAMPLE          reduce using rule 14 (statute -> calling .)
    #               reduce using rule 14 (statute -> calling .)
    PIPE            reduce using rule 14 (statute -> calling .)
    WHERE           reduce using rule 14 (statute -> calling .)
    CLEAR           reduce using rule 14 (statute -> calling .)
    OVAL            reduce using rule 14 (statute -> calling .)
    TRIO            reduce using rule 14 (statute -> calling .)
    QUAD            reduce using rule 14 (statute -> calling .)
    ARC             reduce using rule 14 (statute -> calling .)
    END             reduce using rule 14 (statute -> calling .)
    }               reduce using rule 14 (statute -> calling .)


state 27

    (94) screen -> WHERE .

    MOD             reduce using rule 94 (screen -> WHERE .)
    ID              reduce using rule 94 (screen -> WHERE .)
    IF              reduce using rule 94 (screen -> WHERE .)
    ECHO            reduce using rule 94 (screen -> WHERE .)
    "               reduce using rule 94 (screen -> WHERE .)
    REPLAY          reduce using rule 94 (screen -> WHERE .)
    SAMPLE          reduce using rule 94 (screen -> WHERE .)
    #               reduce using rule 94 (screen -> WHERE .)
    PIPE            reduce using rule 94 (screen -> WHERE .)
    WHERE           reduce using rule 94 (screen -> WHERE .)
    CLEAR           reduce using rule 94 (screen -> WHERE .)
    OVAL            reduce using rule 94 (screen -> WHERE .)
    TRIO            reduce using rule 94 (screen -> WHERE .)
    QUAD            reduce using rule 94 (screen -> WHERE .)
    ARC             reduce using rule 94 (screen -> WHERE .)
    END             reduce using rule 94 (screen -> WHERE .)
    }               reduce using rule 94 (screen -> WHERE .)


state 28

    (81) figure -> ARC .

    (               reduce using rule 81 (figure -> ARC .)
    ID              reduce using rule 81 (figure -> ARC .)
    CTE_INTEGER     reduce using rule 81 (figure -> ARC .)
    CTE_FLOAT       reduce using rule 81 (figure -> ARC .)


state 29

    (13) statute -> command .

    MOD             reduce using rule 13 (statute -> command .)
    ID              reduce using rule 13 (statute -> command .)
    IF              reduce using rule 13 (statute -> command .)
    ECHO            reduce using rule 13 (statute -> command .)
    "               reduce using rule 13 (statute -> command .)
    REPLAY          reduce using rule 13 (statute -> command .)
    SAMPLE          reduce using rule 13 (statute -> command .)
    #               reduce using rule 13 (statute -> command .)
    PIPE            reduce using rule 13 (statute -> command .)
    WHERE           reduce using rule 13 (statute -> command .)
    CLEAR           reduce using rule 13 (statute -> command .)
    OVAL            reduce using rule 13 (statute -> command .)
    TRIO            reduce using rule 13 (statute -> command .)
    QUAD            reduce using rule 13 (statute -> command .)
    ARC             reduce using rule 13 (statute -> command .)
    END             reduce using rule 13 (statute -> command .)
    }               reduce using rule 13 (statute -> command .)


state 30

    (4) programB -> workspace . programC
    (5) programC -> . programB
    (6) programC -> . empty
    (4) programB -> . workspace programC
    (99) empty -> .
    (7) workspace -> . statute
    (8) workspace -> . module
    (9) statute -> . assign
    (10) statute -> . condition
    (11) statute -> . write
    (12) statute -> . repeat
    (13) statute -> . command
    (14) statute -> . calling
    (15) statute -> . pipeline
    (16) statute -> . screen
    (17) module -> . MOD # ID moduleA
    (37) assign -> . ID = expression ;
    (38) condition -> . IF ( expression ) block conditionA
    (41) write -> . ECHO expression ;
    (42) write -> . " CTE_STRING " ;
    (55) repeat -> . REPLAY CTE_INTEGER [ repeatA ] ;
    (51) command -> . figure exp exp color ;
    (52) command -> . SAMPLE commandA
    (25) calling -> . # ID ( callingA
    (43) pipeline -> . PIPE ID pipelineA
    (94) screen -> . WHERE
    (95) screen -> . CLEAR
    (78) figure -> . OVAL
    (79) figure -> . TRIO
    (80) figure -> . QUAD
    (81) figure -> . ARC

    END             reduce using rule 99 (empty -> .)
    MOD             shift and go to state 32
    ID              shift and go to state 22
    IF              shift and go to state 23
    ECHO            shift and go to state 17
    "               shift and go to state 9
    REPLAY          shift and go to state 5
    SAMPLE          shift and go to state 18
    #               shift and go to state 8
    PIPE            shift and go to state 7
    WHERE           shift and go to state 27
    CLEAR           shift and go to state 12
    OVAL            shift and go to state 6
    TRIO            shift and go to state 13
    QUAD            shift and go to state 21
    ARC             shift and go to state 28

    figure                         shift and go to state 3
    module                         shift and go to state 4
    write                          shift and go to state 10
    condition                      shift and go to state 11
    empty                          shift and go to state 53
    repeat                         shift and go to state 14
    screen                         shift and go to state 16
    programB                       shift and go to state 54
    programC                       shift and go to state 55
    statute                        shift and go to state 24
    pipeline                       shift and go to state 25
    calling                        shift and go to state 26
    command                        shift and go to state 29
    workspace                      shift and go to state 30
    assign                         shift and go to state 31

state 31

    (9) statute -> assign .

    MOD             reduce using rule 9 (statute -> assign .)
    ID              reduce using rule 9 (statute -> assign .)
    IF              reduce using rule 9 (statute -> assign .)
    ECHO            reduce using rule 9 (statute -> assign .)
    "               reduce using rule 9 (statute -> assign .)
    REPLAY          reduce using rule 9 (statute -> assign .)
    SAMPLE          reduce using rule 9 (statute -> assign .)
    #               reduce using rule 9 (statute -> assign .)
    PIPE            reduce using rule 9 (statute -> assign .)
    WHERE           reduce using rule 9 (statute -> assign .)
    CLEAR           reduce using rule 9 (statute -> assign .)
    OVAL            reduce using rule 9 (statute -> assign .)
    TRIO            reduce using rule 9 (statute -> assign .)
    QUAD            reduce using rule 9 (statute -> assign .)
    ARC             reduce using rule 9 (statute -> assign .)
    END             reduce using rule 9 (statute -> assign .)
    }               reduce using rule 9 (statute -> assign .)


state 32

    (17) module -> MOD . # ID moduleA

    #               shift and go to state 56


state 33

    (66) exp -> term . expA
    (67) expA -> . expB
    (68) expA -> . empty
    (69) expB -> . + exp
    (70) expB -> . - exp
    (99) empty -> .

    +               shift and go to state 57
    -               shift and go to state 58
    (               reduce using rule 99 (empty -> .)
    ID              reduce using rule 99 (empty -> .)
    CTE_INTEGER     reduce using rule 99 (empty -> .)
    CTE_FLOAT       reduce using rule 99 (empty -> .)
    =               reduce using rule 99 (empty -> .)
    <               reduce using rule 99 (empty -> .)
    >               reduce using rule 99 (empty -> .)
    ;               reduce using rule 99 (empty -> .)
    )               reduce using rule 99 (empty -> .)
    RED             reduce using rule 99 (empty -> .)
    YELLOW          reduce using rule 99 (empty -> .)
    BLUE            reduce using rule 99 (empty -> .)
    GREEN           reduce using rule 99 (empty -> .)
    BLACK           reduce using rule 99 (empty -> .)
    ORANGE          reduce using rule 99 (empty -> .)
    PURPLE          reduce using rule 99 (empty -> .)
    CYAN            reduce using rule 99 (empty -> .)
    ,               reduce using rule 99 (empty -> .)
    ]               reduce using rule 99 (empty -> .)

    expB                           shift and go to state 59
    expA                           shift and go to state 60
    empty                          shift and go to state 61

state 34

    (76) factor -> ( . expression )
    (59) expression -> . exp = = exp
    (60) expression -> . exp < > exp
    (61) expression -> . exp < = exp
    (62) expression -> . exp > = exp
    (63) expression -> . exp > exp
    (64) expression -> . exp < exp
    (65) expression -> . exp
    (66) exp -> . term expA
    (71) term -> . factor termA
    (76) factor -> . ( expression )
    (77) factor -> . var_cte
    (96) var_cte -> . ID
    (97) var_cte -> . CTE_INTEGER
    (98) var_cte -> . CTE_FLOAT

    (               shift and go to state 34
    ID              shift and go to state 40
    CTE_INTEGER     shift and go to state 37
    CTE_FLOAT       shift and go to state 35

    term                           shift and go to state 33
    exp                            shift and go to state 46
    var_cte                        shift and go to state 36
    factor                         shift and go to state 39
    expression                     shift and go to state 62

state 35

    (98) var_cte -> CTE_FLOAT .

    *               reduce using rule 98 (var_cte -> CTE_FLOAT .)
    /               reduce using rule 98 (var_cte -> CTE_FLOAT .)
    +               reduce using rule 98 (var_cte -> CTE_FLOAT .)
    -               reduce using rule 98 (var_cte -> CTE_FLOAT .)
    ;               reduce using rule 98 (var_cte -> CTE_FLOAT .)
    )               reduce using rule 98 (var_cte -> CTE_FLOAT .)
    ,               reduce using rule 98 (var_cte -> CTE_FLOAT .)
    =               reduce using rule 98 (var_cte -> CTE_FLOAT .)
    <               reduce using rule 98 (var_cte -> CTE_FLOAT .)
    >               reduce using rule 98 (var_cte -> CTE_FLOAT .)
    (               reduce using rule 98 (var_cte -> CTE_FLOAT .)
    ID              reduce using rule 98 (var_cte -> CTE_FLOAT .)
    CTE_INTEGER     reduce using rule 98 (var_cte -> CTE_FLOAT .)
    CTE_FLOAT       reduce using rule 98 (var_cte -> CTE_FLOAT .)
    RED             reduce using rule 98 (var_cte -> CTE_FLOAT .)
    YELLOW          reduce using rule 98 (var_cte -> CTE_FLOAT .)
    BLUE            reduce using rule 98 (var_cte -> CTE_FLOAT .)
    GREEN           reduce using rule 98 (var_cte -> CTE_FLOAT .)
    BLACK           reduce using rule 98 (var_cte -> CTE_FLOAT .)
    ORANGE          reduce using rule 98 (var_cte -> CTE_FLOAT .)
    PURPLE          reduce using rule 98 (var_cte -> CTE_FLOAT .)
    CYAN            reduce using rule 98 (var_cte -> CTE_FLOAT .)
    ]               reduce using rule 98 (var_cte -> CTE_FLOAT .)


state 36

    (77) factor -> var_cte .

    *               reduce using rule 77 (factor -> var_cte .)
    /               reduce using rule 77 (factor -> var_cte .)
    +               reduce using rule 77 (factor -> var_cte .)
    -               reduce using rule 77 (factor -> var_cte .)
    ;               reduce using rule 77 (factor -> var_cte .)
    CTE_INTEGER     reduce using rule 77 (factor -> var_cte .)
    (               reduce using rule 77 (factor -> var_cte .)
    ID              reduce using rule 77 (factor -> var_cte .)
    CTE_FLOAT       reduce using rule 77 (factor -> var_cte .)
    =               reduce using rule 77 (factor -> var_cte .)
    <               reduce using rule 77 (factor -> var_cte .)
    >               reduce using rule 77 (factor -> var_cte .)
    )               reduce using rule 77 (factor -> var_cte .)
    RED             reduce using rule 77 (factor -> var_cte .)
    YELLOW          reduce using rule 77 (factor -> var_cte .)
    BLUE            reduce using rule 77 (factor -> var_cte .)
    GREEN           reduce using rule 77 (factor -> var_cte .)
    BLACK           reduce using rule 77 (factor -> var_cte .)
    ORANGE          reduce using rule 77 (factor -> var_cte .)
    PURPLE          reduce using rule 77 (factor -> var_cte .)
    CYAN            reduce using rule 77 (factor -> var_cte .)
    ,               reduce using rule 77 (factor -> var_cte .)
    ]               reduce using rule 77 (factor -> var_cte .)


state 37

    (97) var_cte -> CTE_INTEGER .

    *               reduce using rule 97 (var_cte -> CTE_INTEGER .)
    /               reduce using rule 97 (var_cte -> CTE_INTEGER .)
    +               reduce using rule 97 (var_cte -> CTE_INTEGER .)
    -               reduce using rule 97 (var_cte -> CTE_INTEGER .)
    ;               reduce using rule 97 (var_cte -> CTE_INTEGER .)
    )               reduce using rule 97 (var_cte -> CTE_INTEGER .)
    ,               reduce using rule 97 (var_cte -> CTE_INTEGER .)
    =               reduce using rule 97 (var_cte -> CTE_INTEGER .)
    <               reduce using rule 97 (var_cte -> CTE_INTEGER .)
    >               reduce using rule 97 (var_cte -> CTE_INTEGER .)
    (               reduce using rule 97 (var_cte -> CTE_INTEGER .)
    ID              reduce using rule 97 (var_cte -> CTE_INTEGER .)
    CTE_INTEGER     reduce using rule 97 (var_cte -> CTE_INTEGER .)
    CTE_FLOAT       reduce using rule 97 (var_cte -> CTE_INTEGER .)
    RED             reduce using rule 97 (var_cte -> CTE_INTEGER .)
    YELLOW          reduce using rule 97 (var_cte -> CTE_INTEGER .)
    BLUE            reduce using rule 97 (var_cte -> CTE_INTEGER .)
    GREEN           reduce using rule 97 (var_cte -> CTE_INTEGER .)
    BLACK           reduce using rule 97 (var_cte -> CTE_INTEGER .)
    ORANGE          reduce using rule 97 (var_cte -> CTE_INTEGER .)
    PURPLE          reduce using rule 97 (var_cte -> CTE_INTEGER .)
    CYAN            reduce using rule 97 (var_cte -> CTE_INTEGER .)
    ]               reduce using rule 97 (var_cte -> CTE_INTEGER .)


state 38

    (51) command -> figure exp . exp color ;
    (66) exp -> . term expA
    (71) term -> . factor termA
    (76) factor -> . ( expression )
    (77) factor -> . var_cte
    (96) var_cte -> . ID
    (97) var_cte -> . CTE_INTEGER
    (98) var_cte -> . CTE_FLOAT

    (               shift and go to state 34
    ID              shift and go to state 40
    CTE_INTEGER     shift and go to state 37
    CTE_FLOAT       shift and go to state 35
